--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,7 @@ reqwest = { version = "0.11.22", features = ["json"] }
 log = "0.4.20"
 env_logger = "0.10.1"
 dotenv = "0.15.0"
+rsa-der = "0.3.0"
+num-bigint-dig = "0.8.4"
+sha1 = "0.10.6"
+uuid = "1.5.0"
