--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rustcraft-derive = { path = "rustcraft-derive" }
 colored = "2.0.4"
 tokio = { version = "1.34.0" , features = ["net", "macros", "rt-multi-thread", "fs", "io-util"]}
 async-trait = "0.1.74"
@@ -22,3 +23,8 @@ rsa-der = "0.3.0"
 num-bigint-dig = "0.8.4"
 sha1 = "0.10.6"
 uuid = "1.5.0"
+md-5 = "0.10.6"
+cfb-mode = "0.8.2"
+aes = "0.8.3"
+serde_json = "1.0.108"
+async-nbt = { git = "https://github.com/realmayus/async-nbt" }
