--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 rustcraft-derive = { path = "rustcraft-derive" }
+rustcraft-lib = { path = "rustcraft-lib" }
 colored = "2.0.4"
 tokio = { version = "1.34.0" , features = ["net", "macros", "rt-multi-thread", "fs", "io-util"]}
 async-trait = "0.1.74"
@@ -15,6 +16,7 @@ openssl = "0.10.59"
 rand = "0.8.5"
 num-bigint = "0.4.4"
 serde = { version = "1.0.192", features = ["derive"] }
+serde_json = "1.0.108"
 reqwest = { version = "0.11.22", features = ["json"] }
 log = "0.4.20"
 env_logger = "0.10.1"
@@ -26,5 +28,6 @@ uuid = "1.5.0"
 md-5 = "0.10.6"
 cfb-mode = "0.8.2"
 aes = "0.8.3"
-serde_json = "1.0.108"
 async-nbt = { git = "https://github.com/realmayus/async-nbt" }
+axum = "0.7.2"
+tower-http = { version = "0.5.0", features = ["cors"] }
